--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hwangminsun.github.io/Movie_app",
+  "homepage": "https://hwangminsun.github.io/Movie_app/",
   "name": "movie-routing-app",
   "version": "0.1.0",
   "private": true,
